Update README and Github workflow build paths

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,11 @@ name: Java Integration
 on:
   push:
     branches: [master]
+    paths:
+      - 'api/**'
+      - 'dependencies/**'
+      - 'plugin/**'
+      - 'pom.xml'
   pull_request:
 
 jobs:
