--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <bukkit-api.version>1.15.2-R0.1-SNAPSHOT</bukkit-api.version>
+        <bukkit-api.version>1.16.1-R0.1-SNAPSHOT</bukkit-api.version>
     </properties>
 
     <modules>
@@ -51,14 +51,14 @@
     <repositories>
         <repository>
             <id>spigotmc</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
             <version>${bukkit-api.version}</version>
             <scope>provided</scope>
         </dependency>
