--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
       - 'api/**'
       - 'dependencies/**'
       - 'plugin/**'
+      - '.github/workflows/**'
       - 'pom.xml'
   pull_request:
 
@@ -15,9 +16,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          fetch-depth: 0
+
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
 
       - uses: actions/cache@v1
         with:
