Add next branch to CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Java Integration
 
 on:
   push:
-    branches: [master]
+    branches: [ master, next ]
     paths:
       - 'api/**'
       - 'dependencies/**'
