--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 # # # # # # # # # # # # # # # # # # # # #
 #   EnderContainers configuration       #
-#   Version: 2.2.1                      #
+#   Version: 2.3.0-dev                  #
 #   An enderchests plugin by Utarwyn    #
 # # # # # # # # # # # # # # # # # # # # #
 
