--- a/dependencies/PlotSquared/pom.xml
+++ b/dependencies/PlotSquared/pom.xml
@@ -13,6 +13,7 @@
 
     <artifactId>endercontainers-dependency-plotsquared</artifactId>
     <name>EnderContainers Dependency PlotSquared</name>
+    <packaging>pom</packaging>
 
     <properties>
         <plotsquared.version>5.13.3</plotsquared.version>
