--- a/dependencies/WorldGuard7/pom.xml
+++ b/dependencies/WorldGuard7/pom.xml
@@ -13,6 +13,7 @@
 
     <artifactId>endercontainers-dependency-worldguard7</artifactId>
     <name>EnderContainers Dependency Worldguard7</name>
+    <packaging>pom</packaging>
 
     <properties>
         <worldguard.version>7.0.4</worldguard.version>
