--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,8 +1,7 @@
-name: Java Integration
+name: Verify Pull Request
 
 on:
-  push:
-    branches: [ master, next ]
+  pull_request:
     paths:
       - 'api/**'
       - 'dependencies/**'
@@ -11,7 +10,7 @@ on:
       - 'pom.xml'
 
 jobs:
-  build:
+  verify:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,15 +31,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Build and analyze with SonarCloud
-        run: >
-          mvn --batch-mode
-          -Pcoverage
-          clean verify
-          sonar:sonar
-          -Dsonar.host.url=https://sonarcloud.io
-          -Dsonar.organization=utarwyn-github
-          -Dsonar.projectKey=fr.utarwyn:endercontainers
+      - name: Verify Pull Request
+        run: mvn --batch-mode clean verify
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
