Add option to number the main menu items (#32)

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -32,6 +32,9 @@ enderchests:
   # Use the vanilla enderchest as the first one. Otherwise it will be managed by EnderContainers.
   useVanillaEnderchest: true
 
+  # Number the items in the main menu so that they follow enderchests number
+  numberingEnderchests: false
+
 
 # Mysql/MariaDB configuration, if needed
 mysql:
