Add experimental option to save enderchests on close (#130)

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -11,8 +11,7 @@ debug: false
 locale: en
 
 # A list of worlds in which the plugin will be automatically disabled
-disabledWorlds:
-  - 'my_disabled_world'
+disabledWorlds: [ ]
 
 
 # Enderchests configuration
@@ -69,3 +68,7 @@ others:
 
   # Use a global sound when a player opens/closes an enderchest
   globalSound: true
+
+  # Save enderchests on close. Beware! This could be very resource intensive.
+  # Enable this ONLY if you have issues with the normal saving system.
+  saveOnChestClose: false
