Move to Gradle 7 (#173)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,28 +8,34 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Git repository
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: Set up JDK
-        uses: actions/setup-java@v1
+      - name: Restore Gradle cache
+        uses: actions/cache@v2
         with:
-          java-version: 11
-          server-id: github
-          settings-path: ${{ github.workspace }}
-
-      - uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
-            ${{ runner.os }}-maven-
+            ${{ runner.os }}-gradle-
 
-      - name: Build with Maven
-        run: mvn -B package
+      - name: Setup JDK ${{ matrix.java }}
+        uses: actions/setup-java@v2
+        with:
+          distribution: adopt
+          java-version: ${{ matrix.java }}
+
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Build with Gradle
+        run: |
+          chmod +x gradlew
+          ./gradlew build --stacktrace
 
       - name: Publish to GitHub Packages Apache Maven
-        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+        run: ./gradlew publishApiPublicationToGitHubPackagesRepository publishPluginPublicationToGitHubPackagesRepository --stacktrace
         env:
           GITHUB_TOKEN: ${{ github.token }}
