Replace deprecated Gradle property baseName

--- a/buildSrc/src/main/groovy/fr.utarwyn.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/fr.utarwyn.java-conventions.gradle
@@ -13,7 +13,7 @@ compileJava {
 }
 
 jar {
-    baseName "endercontainers-${project.name}"
+    archiveBaseName.set("endercontainers-${project.name}")
     from "${rootDir}/LICENSE"
 }
 
