Update GitHub Gradle paths for workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
       - 'dependencies/**'
       - 'plugin/**'
       - '.github/workflows/**'
-      - '*.gradle'
+      - '*.gradle*'
 
 jobs:
   build:
