--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,15 @@ dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
 }
 
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/' }
+    }
+    dependencies {
+        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
+    }
+}
+
 rootProject.name = 'EnderContainers'
 
 include 'api'
