--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,9 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: EnderContainers plugin jars
-          path: jars/
+          path: |
+            api/build/libs/*.jar
+            plugin/build/libs/EnderContainers-*.jar
 
   quality:
     runs-on: ubuntu-latest
@@ -84,7 +86,7 @@ jobs:
       - name: Build with Gradle
         run: |
           chmod +x gradlew
-          ./gradlew :plugin:build :plugin:jacocoTestReport :plugin:sonarqube --stacktrace
+          ./gradlew build jacocoTestReport sonarqube --stacktrace
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
