--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: EnderContainers
 author: Utarwyn
-version: 2.2.2
+version: 2.2.3-dev
 main: fr.utarwyn.endercontainers.EnderContainers
 api-version: "1.13"
 softdepend: [Factions, PlotSquared, Essentials, WorldGuard]
