Use personal repo for WorldGuard 7 dependencies

--- a/dependencies/WorldGuard7/pom.xml
+++ b/dependencies/WorldGuard7/pom.xml
@@ -23,6 +23,10 @@
             <id>enginehub</id>
             <url>https://maven.enginehub.org/repo/</url>
         </repository>
+        <repository>
+            <id>utarwyn</id>
+            <url>https://repo.utarwyn.fr</url>
+        </repository>
     </repositories>
 
     <dependencies>
