Simplify forbidden materials loading

--- a/plugin/src/test/resources/config.test.yml
+++ b/plugin/src/test/resources/config.test.yml
@@ -12,6 +12,8 @@ enderchests:
   numberingEnderchests: true
   forbiddenMaterials:
     - andesite
+    - bedrock
+    - oak_boat
     - purpur_block
 mysql:
   enabled: false
