--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,14 +8,14 @@ on:
       - 'dependencies/**'
       - 'plugin/**'
       - '.github/workflows/**'
-      - '*.gradle*'
+      - '*gradle*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '8', '11', '16' ]
+        java: [ '8', '11', '17' ]
     name: Build with Java ${{ matrix.java }}
     steps:
       - name: Checkout Git repository
@@ -44,6 +44,42 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew build --stacktrace
+
+  publish:
+    runs-on: ubuntu-latest
+    name: Publish to Maven repository
+    steps:
+      - name: Checkout Git repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Restore Gradle cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Setup JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: adopt
+          java-version: 17
+
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Build with Gradle
+        run: |
+          chmod +x gradlew
+          ./gradlew build --stacktrace
+
+      - name: Publish to Maven repository
+        run: ./gradlew publishApiPublicationToPersonalRepository publishPluginPublicationToPersonalRepository --stacktrace
+        env:
+          PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
 
       - name: Archive plugin jars on GitHub
         uses: actions/upload-artifact@master
@@ -77,11 +113,11 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      - name: Setup JDK 11
+      - name: Setup JDK 17
         uses: actions/setup-java@v2
         with:
           distribution: adopt
-          java-version: 11
+          java-version: 17
 
       - name: Build with Gradle
         run: |
