--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,7 +7,7 @@ on:
       - 'dependencies/**'
       - 'plugin/**'
       - '.github/workflows/**'
-      - '*.gradle*'
+      - '*gradle*'
 
 jobs:
   verify:
