--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,11 @@
-name: Maven Package
+name: Publish new release
 
 on:
   release:
-    types: [created]
+    types: [published]
 
 jobs:
-  build:
+  github-publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Git repository
@@ -21,11 +21,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Setup JDK ${{ matrix.java }}
+      - name: Setup JDK 17
         uses: actions/setup-java@v2
         with:
           distribution: adopt
-          java-version: ${{ matrix.java }}
+          java-version: 17
 
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
