Update plugin archive classifier

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -17,7 +17,8 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = "${rootProject.name}-${rootProject.version}.jar"
+    archiveFileName.set("${rootProject.name}-${rootProject.version}.jar")
+    archiveClassifier.set('')
 
     dependencies {
         exclude 'META-INF/**'
