--- a/buildSrc/src/main/groovy/fr.utarwyn.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/fr.utarwyn.java-conventions.gradle
@@ -27,8 +27,8 @@ dependencies {
 
     testImplementation platform('org.junit:junit-bom:5.10.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'org.mockito:mockito-core:5.7.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
+    testImplementation 'org.mockito:mockito-core:4.11.0' // cannot upgrade to 5+ because of Java 8 compatibility
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
     testImplementation 'org.assertj:assertj-core:3.24.2'
 }
 
