--- a/plugin/src/test/resources/config.test.yml
+++ b/plugin/src/test/resources/config.test.yml
@@ -29,7 +29,7 @@ ui:
         type: 'RED_STAINED_GLASS_PANE'
         lore: [ '{{menus.chest_full}}' ]
       - condition: 'filling = 0%'
-        lore: [ '{{menus.chest_empty}}' ]
+        lore: [ '{{menus.chest_empty}}', '&6Second line' ]
       - condition: 'filling >= 90%'
         type: 'RED_STAINED_GLASS_PANE'
     numbering: true
